# argos_bridge

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  makefile
Vicon/: .gitignore  CMakeLists.txt  README.md  pc_log.csv  test.csv
Vicon/argos3/experiments/: README.md  battery_vicon.argos  controller_allocator_test.argos  csv_updater_test.argos  diffusion_simulator.argos  diffusion_vicon.argos  half_virtual_stimergy.argos  kilotrack.argos  open_virtual_stimergy.argos  persistant_coverage_simulation.argos  persistant_coverage_vicon.argos  pheramone_simulator.argos  pheramone_vicon.argos  quarter_virtual_stimergy.argos
Vicon/argos3/plugins/: CMakeLists.txt
Vicon/argos3/plugins/controllers/: CMakeLists.txt
Vicon/argos3/plugins/controllers/buzz_controllers/: CMakeLists.txt  barrier.bzz  diffusion.bzz  lennardjones.bzz  messaging.bzz  persistant_coverage.bzz  test.bzz  vsk-known.bzz
Vicon/argos3/plugins/controllers/khepera_diffusion/: CMakeLists.txt  khepera_diffusion.cpp  khepera_diffusion.h
Vicon/argos3/plugins/controllers/khepera_pheromone/: CMakeLists.txt  khepera_pheromone_follower.cpp  khepera_pheromone_follower.h  khepera_pheromone_layer.cpp  khepera_pheromone_layer.h
Vicon/argos3/plugins/controllers/kilobot_dummy/: CMakeLists.txt  kilobot_dummy.cpp  kilobot_dummy.h
Vicon/argos3/plugins/loop_functions/: CMakeLists.txt
Vicon/argos3/plugins/loop_functions/diffusion_visualizer/: CMakeLists.txt  diffusion_visualizer.cpp  diffusion_visualizer.h
Vicon/argos3/plugins/loop_functions/master_loop_functions/: master_loop_functions.cpp  master_loop_functions.h
Vicon/argos3/plugins/loop_functions/networking_loop_functions/: CMakeLists.txt  network_loop_function.cpp  network_loop_function.h
Vicon/argos3/plugins/loop_functions/pc_loop_functions/: CMakeLists.txt  pc_loop_functions.cpp  pc_loop_functions.h  pc_qt_user_functions.cpp  pc_qt_user_functions.h
Vicon/argos3/plugins/loop_functions/pheromone_visualizer/: CMakeLists.txt  pheromone_visualizer.cpp  pheromone_visualizer.h
Vicon/argos3/plugins/loop_functions/trail_loop_functions/: CMakeLists.txt  trail_loop_functions.cpp  trail_loop_functions.h  trail_qtuser_functions.cpp  trail_qtuser_functions.h
Vicon/argos3/plugins/loop_functions/trajectory_loop_functions/: CMakeLists.txt  trajectory_loop_functions.cpp  trajectory_loop_functions.h  trajectory_qtuser_functions.cpp  trajectory_qtuser_functions.h
Vicon/argos3/plugins/robots/: CMakeLists.txt
Vicon/argos3/plugins/robots/generic/: CMakeLists.txt
Vicon/argos3/plugins/robots/generic/control_interface/: ci_pheromone_actuator.cpp  ci_pheromone_actuator.h  ci_pheromone_sensor.cpp  ci_pheromone_sensor.h
Vicon/argos3/plugins/robots/generic/simulator/: pheromone_default_actuator.cpp  pheromone_default_actuator.h  pheromone_default_sensor.cpp  pheromone_default_sensor.h
Vicon/argos3/plugins/robots/kheperaiv/: CMakeLists.txt
Vicon/argos3/plugins/robots/kheperaiv/simulator/: kheperaiv_battery_tracked_sensor.cpp  kheperaiv_battery_tracked_sensor.h  kheperaiv_proximity_st_combined_sensor.cpp  kheperaiv_proximity_st_combined_sensor.h  kheperaiv_proximity_tracked_sensor.cpp  kheperaiv_proximity_tracked_sensor.h
Vicon/argos3/plugins/simulator/: CMakeLists.txt
Vicon/argos3/plugins/simulator/media/: CMakeLists.txt  pheromone_medium.cpp  pheromone_medium.h
Vicon/argos3/plugins/simulator/physics_engines/: CMakeLists.txt
Vicon/argos3/plugins/simulator/physics_engines/tracking/: CMakeLists.txt  tracking_box_model.cpp  tracking_box_model.h  tracking_cylinder_model.cpp  tracking_cylinder_model.h  tracking_engine.cpp  tracking_engine.h  tracking_khepera_model.cpp  tracking_khepera_model.h  tracking_kilobot_model.cpp  tracking_kilobot_model.h  tracking_model.cpp  tracking_model.h
Vicon/argos3/plugins/simulator/physics_engines/tracking/tracking_updaters/: README.md  csv_updater.cpp  csv_updater.h  kilotrack_updater.cpp  kilotrack_updater.h  spam_updater.cpp  spam_updater.h  tracking_updater.h  vicon_updater.cpp  vicon_updater.h
Vicon/argos3/plugins/utility/: CMakeLists.txt
Vicon/argos3/plugins/utility/controller_assignment/: CMakeLists.txt  controller_assigner.cpp  controller_assigner.h  controller_rule.h  controller_rule_balanced.h  controller_rule_balanced_limited.h  controller_rule_default.cpp  controller_rule_default.h  controller_rule_limited.cpp  controller_rule_limited.h  controller_rule_unlimited.cpp  controller_rule_unlimited.h
Vicon/argos3/plugins/utility/datatypes/: CMakeLists.txt  reservable_buffer.cpp  reservable_buffer.h
Vicon/argos3/plugins/utility/networking/: CMakeLists.txt  moveable_tcp_socket.cpp  moveable_tcp_socket.h
Vicon/testing/python_csv_updater_generator/: csv_generator.py
Vicon/testing/python_network/: circle_inplace.py  drivestraight.py  loopmanuvers.py  networktesting.py  servertesting.py
Vicon/vicon_examples/: CMakeLists.txt  Vicon_Example  vicon.cpp  vicon.h  vicon_driver.cpp
argos_bridge/: CMakeLists.txt
argos_bridge/launch/: killall.sh  launch.sh
argos_bridge/launch/argos_worlds/: differential_drive_test.argos  diffusion_ros.argos  multi_robot_dan_maze.argos  multi_robots.argos  single_live_test.argos
argos_bridge/launch/roslaunch_files/: explore_demo.launch  gmapping.launch  m-explore.launch  move_base.launch  teleop_demo.launch
argos_bridge/plugin/: CMakeLists.txt
argos_bridge/plugin/kheperaiv_ros/: kheperaiv_ros.cpp
argos_bridge/scripts/: robot_config.py  teleop_key.py
argos_bridge/src/: CMakeLists.txt
argos_bridge/src/plugins/: CMakeLists.txt
argos_bridge/src/plugins/controllers/: CMakeLists.txt
argos_bridge/src/plugins/controllers/differential_drive/: CMakeLists.txt  differential_drive.cpp  differential_drive.h
argos_bridge/src/plugins/controllers/diffusion_lidar/: CMakeLists.txt  diffusion_lidar.h
argos_bridge/src/plugins/controllers/diffusion_ros/: CMakeLists.txt  diffusion_ros.cpp  diffusion_ros.h
argos_bridge/src/plugins/loop_functions/: CMakeLists.txt
argos_bridge/src/tests/: CMakeLists.txt  test_test.cpp
(+2 files in other folders)
